@@ -1,3 +1,8 @@
+2011-03-10 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpn/x86/pentium4/sse2/bdiv_dbm1c.asm: New file, was in atom.
+	* mpn/x86/atom/sse2/bdiv_dbm1c.asm: Grab file above.
+
 2011-03-09  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/x86_64/aorrlsh_n.asm: Complete rewrite.
